--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:chart="using:Syncfusion.UI.Xaml.Charts"
     mc:Ignorable="d">
-    <ScrollViewer VerticalScrollBarVisibility="Hidden">  
+   <!-- <ScrollViewer VerticalScrollBarVisibility="Auto" >  -->
          <Grid  Name="mainGrid" >
  
             <Grid.RowDefinitions>
@@ -29,11 +29,11 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="1.9*"></ColumnDefinition>
+                <ColumnDefinition Width="2.1*"></ColumnDefinition>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
                 <ColumnDefinition Width="6*"></ColumnDefinition>
-               
+                <ColumnDefinition Width="0.1*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
             <ProgressRing  x:Name="mainGridProgresRing"/>
@@ -124,50 +124,54 @@
             <TextBox Visibility="Collapsed" Name="PhaseDiffResult" Grid.Row="2" Background="Yellow" BorderThickness="0" Grid.Column="2" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="Diff = 5"></TextBox>
 
             <!-- parameter monitoring chart -->
-            <Border Margin="5,5,5,5" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" Grid.Row="10" Grid.RowSpan="5" Grid.Column="0" Grid.ColumnSpan="4">
+            <Border Margin="5,5,5,5" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" Grid.Row="10" Grid.RowSpan="6" Grid.Column="0" Grid.ColumnSpan="4">
                 <StackPanel Margin="5,5,5,5" Orientation="Vertical">
                     <TextBlock Margin="5,0,0,0" Text="Monitoring" FontWeight="SemiBold"></TextBlock>
-                        <chart:SfChart  
+                       
+            </StackPanel>
+            </Border>
+
+        <chart:SfChart  
                             Name="ChartParameters"    
-                            Margin="0,10,0,0"
+                            Margin="10,10,15,5"
                             Grid.Row="11"
                             Grid.RowSpan="5"
                             Grid.Column="0"
                             Grid.ColumnSpan="4">
-                     <chart:SfChart.PrimaryAxis>
-                        <chart:TimeSpanAxis ></chart:TimeSpanAxis>
-                    </chart:SfChart.PrimaryAxis>
-                       <chart:SfChart.Behaviors>
-                            <chart:ChartTrackBallBehavior LabelDisplayMode="NearestPoint" ></chart:ChartTrackBallBehavior>
-                        </chart:SfChart.Behaviors>
-                        <chart:SfChart.SecondaryAxis>
-                            <chart:NumericalAxis  StartRangeFromZero="False" Interval="20"  EnableAutoIntervalOnZooming="False">
-                            <chart:NumericalAxis.StripLines>
-                                <chart:ChartStripLine Name="HotSafeZone" Start="180" Width="25"  Background="PaleGreen"></chart:ChartStripLine>
-                                <chart:ChartStripLine Name="ColdSafeZone"   Start="30" Width="25"  Background="PaleGoldenrod"></chart:ChartStripLine>
-                            </chart:NumericalAxis.StripLines>
-                        </chart:NumericalAxis>
-                    </chart:SfChart.SecondaryAxis>
-                        <chart:SfChart.Annotations>
-                            <chart:HorizontalLineAnnotation Name="SetHotSafeZoneLine" ShowToolTip="True" DragCompleted="SetHotSafeZoneLine_DragCompleted" 
+            <chart:SfChart.PrimaryAxis>
+                <chart:TimeSpanAxis ></chart:TimeSpanAxis>
+            </chart:SfChart.PrimaryAxis>
+            <chart:SfChart.Behaviors>
+                <chart:ChartTrackBallBehavior LabelDisplayMode="NearestPoint" ></chart:ChartTrackBallBehavior>
+            </chart:SfChart.Behaviors>
+            <chart:SfChart.SecondaryAxis>
+                <chart:NumericalAxis  StartRangeFromZero="False" Interval="20"  EnableAutoIntervalOnZooming="False">
+                    <chart:NumericalAxis.StripLines>
+                        <chart:ChartStripLine Name="HotSafeZone" Start="180" Width="25"  Background="PaleGreen"></chart:ChartStripLine>
+                        <chart:ChartStripLine Name="ColdSafeZone"   Start="30" Width="25"  Background="PaleGoldenrod"></chart:ChartStripLine>
+                    </chart:NumericalAxis.StripLines>
+                </chart:NumericalAxis>
+            </chart:SfChart.SecondaryAxis>
+            <chart:SfChart.Annotations>
+                <chart:HorizontalLineAnnotation Name="SetHotSafeZoneLine" ShowToolTip="True" DragCompleted="SetHotSafeZoneLine_DragCompleted" 
                                                             DragDelta="SetHotSafeZoneLine_DragDelta" CanDrag="True" CoordinateUnit="Axis"  Stroke="DarkGreen" StrokeThickness="2">
-                        
-                            </chart:HorizontalLineAnnotation>
-                            <chart:HorizontalLineAnnotation Name="SetColdSafeZoneLine" ShowToolTip="True" CanDrag="True" Stroke="OrangeRed" CoordinateUnit="Axis"  StrokeThickness="2" 
+
+                </chart:HorizontalLineAnnotation>
+                <chart:HorizontalLineAnnotation Name="SetColdSafeZoneLine" ShowToolTip="True" CanDrag="True" Stroke="OrangeRed" CoordinateUnit="Axis"  StrokeThickness="2" 
                                                             DragDelta="SetColdSafeZoneLine_DragDelta" DragCompleted="SetColdSafeZoneLine_DragCompleted">
-                        
-                            </chart:HorizontalLineAnnotation>
-                        </chart:SfChart.Annotations>    
-                
+
+                </chart:HorizontalLineAnnotation>
+            </chart:SfChart.Annotations>
+
             <chart:SfChart.Legend>
-                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
+                <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
             </chart:SfChart.Legend>
-                          
-                <chart:SplineSeries Name="Series_THotTank" LegendIcon="Diamond" Label="THotTank"  XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"/>
-                <chart:SplineSeries Name="Series_TColdTank" LegendIcon="Diamond" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank"  ItemsSource="{Binding power}"/>
-                <chart:SplineSeries   Name="Series_TRetActual" LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"/>
-                <chart:StepLineSeries Name="Series_ValveReturn" LegendIcon="Circle" Label="ValveReturn"   XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"/>
-       <!--     <chart:FastLineBitmapSeries Name="Series_THotBuffer" LegendIcon="Diamond" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"/>
+
+            <chart:SplineSeries Name="Series_THotTank" LegendIcon="Diamond" Label="THotTank"  XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"/>
+            <chart:SplineSeries Name="Series_TColdTank" LegendIcon="Diamond" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank"  ItemsSource="{Binding power}"/>
+            <chart:SplineSeries   Name="Series_TRetActual" LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"/>
+            <chart:StepLineSeries Name="Series_ValveReturn" LegendIcon="Circle" Label="ValveReturn"   XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"/>
+            <!--     <chart:FastLineBitmapSeries Name="Series_THotBuffer" LegendIcon="Diamond" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_TMidBuffer" LegendIcon="Diamond" Label="TMidBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_TColdBuffer" LegendIcon="Diamond" Label="TColdBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"/>
             
@@ -179,29 +183,14 @@
           
                         <chart:StepLineSeries Name="Series_ValveFeedHot" LegendIcon="Circle" Label="ValveFeedHot"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedHot" ItemsSource="{Binding power}"/>
                         <chart:SplineSeries Name="Series_TRetForecasted" LegendIcon="Diamond" Label="TRetFlowActive" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"/>
-          -->                         
-          </chart:SfChart>
-            </StackPanel>
-            </Border>
-            <!-- overlaying Button for Export -->
+          -->
+        </chart:SfChart>
+
+
+        <!-- overlaying Button for Export -->
             <Button Visibility="Collapsed" Name="ButtonExportParameterChart" Content="Export" Grid.Row="1" Grid.Column="2" Margin="30,0,0,25" Click="ButtonExportParameterChart_Click" VerticalAlignment="Bottom" HorizontalAlignment="Left"></Button>
             
-        <!-- overlay own text as labels for chart 
-            <StackPanel Orientation="Vertical" Grid.Row="11" Grid.RowSpan="6">
-                <TextBlock Margin="2,30,0,0" FontSize="8" Text="Unknown"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="OpenEnd" FontSizefull="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="EjectEnd" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="EjectBegin" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="OpenBegin" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="CoolingEnd" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="InjectionEnd" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="InjectionBegin" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="ColdAtMEntry" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="HotAtMEntry" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="Initial" FontSize="8"></TextBlock>
-                <TextBlock Margin="2,10,0,0" Text="Idle" FontSize="8"></TextBlock>
-            </StackPanel> -->
-
+      
             <!-- state chart -->
             <Border  Margin="5,5,5,5" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5"  Grid.Row="0" Grid.RowSpan="10" Grid.Column="2" Grid.ColumnSpan="2">
                 <StackPanel Margin="5,5,5,5" Orientation="Vertical">
@@ -230,7 +219,7 @@
 
 
             <chart:SfChart  
-            Grid.Row="2" Grid.RowSpan="8" Grid.Column="3" Grid.ColumnSpan="1" Margin="0,0,20,10">
+            Grid.Row="2" Grid.RowSpan="8" Grid.Column="3" Grid.ColumnSpan="1" Margin="0,0,15,10">
   <!--              <chart:SfChart.Behaviors>
                     <chart:ChartTrackBallBehavior></chart:ChartTrackBallBehavior>
                 </chart:SfChart.Behaviors>
@@ -254,6 +243,6 @@
               
         </Grid>
 
-    </ScrollViewer>
+  
 
 </Page>
