--- a/DemoPrototype/TunePage.xaml
+++ b/DemoPrototype/TunePage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" Margin="0,-7,0,7">
 
-    <Grid Name="TuneGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,13,0,-13">
+    <Grid Name="TuneGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
@@ -78,14 +78,14 @@
         <TextBlock  Margin="50,0,0,10" Grid.Row="2" Grid.Column="6" VerticalAlignment="Center" Text="Hot pump"></TextBlock>
         <TextBlock Margin="20,5,0,15" Name="TextBlock_HotCalibrate" Grid.Row="2" Grid.Column="7" VerticalAlignment="Center" HorizontalAlignment="Left" Text="88"></TextBlock>
         <TextBlock  VerticalAlignment="Center" Grid.Row="2" Grid.Column="8" Margin="10,0,0,10" Text="+"></TextBlock>
-        <TextBox Name="HotFeedToReturnDelayCalTime" Grid.Row="2" Grid.Column="8" Grid.ColumnSpan="2" VerticalAlignment="Center" Margin="44,0,0,10" HorizontalAlignment="Left" Width="30" GotFocus="HotFeedToReturnDelayCalTime_GotFocus" TextChanged="HotFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True"  Text="22"></TextBox>
+        <TextBox Name="HotFeedToReturnDelayCalTime" Grid.Row="2" Grid.Column="8" Grid.ColumnSpan="2" VerticalAlignment="Top" Margin="40,0,0,0" HorizontalAlignment="Left" Width="30" GotFocus="HotFeedToReturnDelayCalTime_GotFocus" TextChanged="HotFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True"  Text="22"></TextBox>
         <TextBlock  VerticalAlignment="Center" Margin="2,0,0,10"  Grid.Row="2" Grid.Column="9"  HorizontalAlignment="Center" Text="="></TextBlock>
         <TextBlock Name="TextBlock_SumHotDelayTime" VerticalAlignment="Center" Grid.Row="2" Grid.Column="10" Margin="5,0,0,10" Text="111"></TextBlock>
 
         <TextBlock  Margin="50,0,0,10"  Grid.Row="3" VerticalAlignment="Center" Grid.Column="6" Text="Cold pump"></TextBlock>
         <TextBlock Grid.Row="3" Grid.Column="7" Name="TextBlock_ColdCalibrate" VerticalAlignment="Center"  HorizontalAlignment="Left" Margin="20,0,0,10" Text="110"></TextBlock>
         <TextBlock Grid.Row="3" Grid.Column="8" VerticalAlignment="Center" Margin="10,0,0,10" Text="+"></TextBlock>
-        <TextBox Grid.Row="3" Grid.Column="8" Grid.ColumnSpan="2" Width="30" Margin="44,0,0,10" HorizontalAlignment="Left" VerticalAlignment="Center" Name="ColdFeedToReturnDelayCalTime"  GotFocus="ColdFeedToReturnDelayCalTime_GotFocus" TextChanged="ColdFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True"  Text="33"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="8" Grid.ColumnSpan="2" Width="30" Margin="40,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Name="ColdFeedToReturnDelayCalTime"  GotFocus="ColdFeedToReturnDelayCalTime_GotFocus" TextChanged="ColdFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True"  Text="33"></TextBox>
         <TextBlock  Grid.Row="3" Grid.Column="9" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2,0,0,10" Text="="></TextBlock>
         <TextBlock  Grid.Row="3" Grid.Column="10" Name="TextBlock_SumColdDelayTime" Margin="5,0,0,10" VerticalAlignment="Center" Text="122"></TextBlock>
 
@@ -106,20 +106,20 @@
         <TextBlock  Margin="50,0,0,0"  Grid.Row="6" VerticalAlignment="Center" Grid.Column="6" Text="Use"></TextBlock>
         <TextBlock Grid.Row="6" Grid.Column="7" Name="F2MCalUsedText" VerticalAlignment="Center"  HorizontalAlignment="Left" Margin="20,0,0,0" Text="110"></TextBlock>
         <TextBlock Grid.Row="6" Grid.Column="8" VerticalAlignment="Center" Margin="10,0,0,0" Text="+"></TextBlock>
-        <TextBox Grid.Row="6" Grid.Column="8" Grid.ColumnSpan="2" Width="30" Margin="44,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Name="F2MTuneUsedText"  GotFocus="F2MTuneUsedText_GotFocus" TextChanged="F2MTuneUsedText_TextChanged"  IsReadOnly="True"  Text="33"></TextBox>
+        <TextBox Grid.Row="6" Grid.Column="8" Grid.ColumnSpan="2" Width="30" Margin="40,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Name="F2MTuneUsedText"  GotFocus="F2MTuneUsedText_GotFocus" TextChanged="F2MTuneUsedText_TextChanged"  IsReadOnly="True"  Text="33"></TextBox>
         <TextBlock  Grid.Row="6" Grid.Column="9" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2,0,0,0" Text="="></TextBlock>
         <TextBlock  Grid.Row="6" Grid.Column="10" Name="F2MTotalUsedText" Margin="5,0,0,0" VerticalAlignment="Center" Text="122"></TextBlock>
 
         <!-- Feed and return timing -->
 
-        <TextBlock Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2"  Margin="50,0,0,0"  Text="Shift Return valve Switch time (s)" VerticalAlignment="Top"></TextBlock>
+        <TextBlock Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2"  Margin="40,0,0,0"  Text="Shift Return valve Switch time (s)" VerticalAlignment="Top"></TextBlock>
         <TextBlock Margin="20,0,0,0" Grid.Row="10" Grid.Column="1"  HorizontalAlignment="Left"> Calibrate</TextBlock>
         <TextBlock Margin="10,0,0,0" Grid.Row="10" Grid.Column="2" Grid.ColumnSpan="3" Text="+"></TextBlock>
         <TextBlock Margin="0,0,0,0" Grid.Row="10" Grid.Column="2"   HorizontalAlignment="Right" Text="Tune"></TextBlock>
         <TextBlock Margin="2,0,0,0" Grid.Row="10" Grid.Column="3" HorizontalAlignment="Center" Text="="></TextBlock>
         <TextBlock Margin="0,0,0,0" Grid.Row="10" Grid.Column="4"  Text="Total"></TextBlock>
 
-        <TextBlock  Margin="50,20,0,0"  Grid.Row="10" VerticalAlignment="Center" Grid.Column="0" Text="Energy active timing"></TextBlock>
+        <TextBlock  Margin="40,20,0,0"  Grid.Row="10" VerticalAlignment="Center" Grid.Column="0" Text="Energy active timing"></TextBlock>
         <TextBlock Grid.Row="10" Grid.Column="1" Name="EACalText" VerticalAlignment="Center"  HorizontalAlignment="Left" Margin="20,20,0,0" Text="110"></TextBlock>
         <TextBlock Grid.Row="10" Grid.Column="2" VerticalAlignment="Center" Margin="10,20,0,0" Text="+"></TextBlock>
         <TextBox Grid.Row="10" Grid.Column="2" Grid.ColumnSpan="2" Width="30" Margin="44,20,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Name="EATuneText"  GotFocus="EATuneText_GotFocus"  TextChanged="EATuneText_TextChanged"  IsReadOnly="True"  Text="33"></TextBox>
@@ -147,7 +147,7 @@
 
 
         <!-- Freeze button -->
-        <Button Name="TuneFreezeButton" Grid.Row="7" Grid.Column="6" VerticalAlignment="Center" Margin="50,0,0,10" Click="TuneFreezeButton_Click"  Width="80" Content="Freeze"></Button>
+        <Button Visibility="Collapsed" Name="TuneFreezeButton" Grid.Row="7" Grid.Column="6" VerticalAlignment="Center" Margin="50,0,0,10" Click="TuneFreezeButton_Click"  Width="80" Content="Freeze"></Button>
 
         <TextBox Visibility="Collapsed" Name="TextBox_FocusControl"></TextBox>
     </Grid>
